# nerfacc

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  CNAME  LICENSE  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  setup.sh
.doctrees/: environment.pickle  index.doctree
.doctrees/apis/: estimators.doctree  rendering.doctree  utils.doctree
.doctrees/examples/: camera.doctree  dynamic.doctree  static.doctree
.doctrees/examples/camera/: barf.doctree
.doctrees/examples/dynamic/: kplanes.doctree  tineuvox.doctree  tnerf.doctree
.doctrees/examples/static/: nerf.doctree  ngp.doctree  tensorf.doctree
.doctrees/methodology/: coding.doctree  sampling.doctree
.github/actions/setup/: action.yml
.github/workflows/: build_wheels.yml  building.yml  code_checks.yml  doc.yml  publish.yml
.github/workflows/aws/: update_index.py
.github/workflows/cuda/: Linux-env.sh  Linux.sh  Windows-env.sh  Windows.sh  cu101-Linux.sh  cu102-Linux.sh  cu111-Linux.sh  cu113-Linux.sh  cu115-Linux.sh  cu116-Linux.sh  cu117-Linux.sh
_sources/: index.rst.txt
_sources/apis/: rendering.rst.txt
_sources/examples/: dynamic.rst.txt  static.rst.txt
_sources/examples/dynamic/: tineuvox.rst.txt
_static/css/: theme.css
apis/: estimators.html  rendering.html  utils.html
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  usage.rst
docs/source/_static/css/: readthedocs.css
docs/source/apis/: contraction.rst  estimators.rst  grid.rst  occupancy_field.rst  ray_marching.rst  rendering.rst  sampling.rst  utils.rst  volumetric_marching.rst  volumetric_rendering.rst
docs/source/examples/: camera.rst  dnerf.rst  dynamic.rst  ngp.rst  static.rst  tensorf.rst  unbounded.rst  vanilla.rst
docs/source/examples/camera/: barf.rst
docs/source/examples/dynamic/: kplanes.rst  tineuvox.rst  tnerf.rst
docs/source/examples/static/: nerf.rst  ngp.rst  tensorf.rst
docs/source/methodology/: coding.rst  sampling.rst
examples/: README.md  _utils.py  camera.html  dynamic.html  mip_utils.py  prop_utils.py  requirements.txt  static.html  train_mip_nerf.py  train_mlp_dnerf.py  train_mlp_nerf.py  train_mlp_tnerf.py  train_ngp.py  train_ngp_nerf.py  train_ngp_nerf_occ.py  train_ngp_nerf_prop.py  train_ngp_nerf_proposal.py  train_ngp_temp.py  train_prop_nerf.py  train_tensorf_nerf.py  trainval.py  utils.py
examples/camera/: barf.html
examples/datasets/: base.py  dnerf_synthetic.py  generateTestPoses.py  nerf_360_v2.py  nerf_synthetic.py  nerf_synthetic2.py  nerf_test_poses.py  temp.py  utils.py
examples/dynamic/: kplanes.html  tineuvox.html  tnerf.html
examples/radiance_fields/: base.py  mlp.py  ngp.py  tensorf.py
examples/static/: nerf.html  ngp.html  tensorf.html
methodology/: coding.html  sampling.html
nerfacc/: __init__.py  _grid.py  _pack.py  _pdf.py  _proposal.py  _proposal_packed.py  cameras.py  cameras2.py  cdf.py  common.py  contraction.py  csr_ops.py  data_specs.py  grid.py  intersection.py  losses.py  occupancy_field.py  pack.py  pdf.py  pipeline.py  proposal.py  proposal_packed.py  ray_marching.py  rendering.py  sampling.py  scan.py  scan_cub.py  utils.py  version.py  vol_rendering.py  volrend.py  volumetric_rendering.py
nerfacc/_cuda/: __init__.py  _backend.py
nerfacc/_cuda/csrc/: contraction.cu  pack.cu  pdf.cu  pybind.cu  ray_marching.cu
nerfacc/_cuda/csrc/include/: helpers_contraction.h  helpers_cuda.h
nerfacc/cuda/: __init__.py  _backend.py
nerfacc/cuda/csrc/: camera.cu  cdf.cu  contraction.cu  grid.cu  index.cu  intersection.cu  nerfacc.cpp  pack.cu  pdf.cu  pybind.cu  ray_marching.cu  render_transmittance.cu  render_transmittance_cub.cu  render_weight.cu  rendering.cu  rendering_fuse.cu  rendering_utils_cub.cu  rendering_utils_naive.cu  scan.cu  scan_cub.cu  vol_rendering.cu  volumetric_marching.cu  volumetric_rendering.cu  volumetric_weights.cu
nerfacc/cuda/csrc/include/: data_spec.hpp  data_spec_packed.cuh  helpers.h  helpers_contraction.h  helpers_cuda.h  helpers_math.h  helpers_nerfacc.h  utils.cub.cuh  utils_camera.cuh  utils_contraction.cuh  utils_cuda.cuh  utils_grid.cuh  utils_scan.cuh
nerfacc/cuda2/: __init__.py  _backend.py
nerfacc/cuda2/csrc/: intersection.cu  marching.cu  pybind.cu  ray_marching.cu  volumetric_marching.cu
nerfacc/cuda2/csrc/include/: helpers_cuda.h  helpers_nerfacc.h
nerfacc/estimators/: base.py  n3tree.py  occ_grid.py  prop_net.py  vdb.py
scripts/: analysis.ipynb  analysis_pretty.ipynb  collect_lpips_metrics.ipynb  run_aws_listing.py  run_dev_checks.py  run_profiler.py  run_wheel_page.py
tests/: _test_grid.py  _test_pdf.py  _test_rendering.py  compare.py  test_all.py  test_camera.py  test_contraction.py  test_csr_ops.py  test_cuda.py  test_grid.py  test_index.py  test_intersection.py  test_loss.py  test_marching.py  test_occupancy_field.py  test_pack.py  test_pdf.py  test_pdf_query.py  test_ray_marching.py  test_rendering.py  test_rendering_utils.py  test_resampling.py  test_scan.py  test_specs.py  test_transmittance.py  test_vdb.py  test_volrend.py
tests/arxiv/: compare.py  test_all.py  test_contraction.py  test_cuda.py  test_grid.py  test_marching.py  test_occupancy_field.py  test_rendering.py
tests/arxiv/cuda/: test_ray_marching.py
tests/cuda/: test_ray_marching.py
tests/examples/: ray_marching.py  render_visibility.py  render_weight_from_density.py  rendering.py  unpack_to_ray_indices.py
