[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nerfacc"
version = "0.0.9"
authors = [{name = "Ruilong", email = "ruilongli94@gmail.com"}]
license = { text="MIT" }
requires-python = ">=3.8"
dependencies = [
    "ninja>=1.10.2.3",
    "pybind11>=2.10.0",
    "torch>=1.12.1",
    "rich>=12"
]

[project.optional-dependencies]

[tool.setuptools.package-data]
"*" = ["*.cu", "*.cpp", "*.h"]

# for development
dev = [
    "black",
    "isort",
    "pytest",
]