[build-system]
requires = ["setuptools==65.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nerfacc"
version = "0.3.2"
description = "A General NeRF Acceleration Toolbox."
readme = "README.md"
authors = [{name = "Ruilong", email = "ruilongli94@gmail.com"}]
license = { text="MIT" }
requires-python = ">=3.7"
dependencies = [
    "importlib_metadata>=5.0.0; python_version<'3.8'",
    "ninja>=1.10.2.3",
    "pybind11>=2.10.0",
    "torch",  # tested with 1.12.0
    "rich>=12"
]

# [options]
# equivalent to using --extra-index-url with pip, 
# which is needed for specifying the CUDA version for torch
# dependency_links = [
#     "https://download.pytorch.org/whl/cu116"
# ]

[tool.setuptools.package-data]
"*" = ["*.cu", "*.cpp", "*.h"]

[project.urls]
homepage = "https://www.nerfacc.com/en/latest/"
documentation = "https://www.nerfacc.com/en/latest/"
repository = "https://github.com/KAIR-BAIR/nerfacc/"

[project.optional-dependencies]
# Development packages
dev = [
    "black[jupyter]==22.3.0",
    "isort==5.10.1",
    "pylint==2.13.4",
    "pytest==7.1.2",
    "pytest-xdist==2.5.0",
    "typeguard>=2.13.3",
    "pyyaml==6.0",
    "build",
    "twine",
]

# [tool.setuptools.packages.find]
# include = ["nerfacc", "scripts"]

[tool.black]
line-length = 80

[tool.isort]
multi_line_output = 3
line_length = 80
include_trailing_comma = true

[tool.pylint.messages_control]
max-line-length = 80
generated-members = ["numpy.*", "torch.*", "cv2.*", "cv.*"]
good-names-rgxs = "^[_a-zA-Z][_a-z0-9]?$"
ignore-paths = ["^tests/.*$", "examples/pycolmap"]
jobs = 0
disable = [
  "duplicate-code",
  "fixme",
  "logging-fstring-interpolation",
  "too-many-arguments",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-locals",
  "unnecessary-ellipsis",
]

[tool.pytest.ini_options]
addopts = "-n=4 --typeguard-packages=nerfacc --disable-warnings"
testpaths = [
    "tests",
]

[tool.pyright]
include = ["nerfacc"]
exclude = ["**/node_modules",
    "**/__pycache__",
]
ignore = ["nerfacc/cuda"]
defineConstant = { DEBUG = true }

pythonVersion = "3.9"
pythonPlatform = "Linux"
